added maven support and modules for Homework1 & Homework2. Homework1 is moved from src to IntroHomework1